@@ -1,3 +1,7 @@
+2005-03-15  Boris Kolpackov  <boris@kolpackov.net>
+
+	* scripts/variables/automatic: Add a test for Savannah bug #12320.
+
 2005-03-10  Boris Kolpackov  <boris@kolpackov.net>
 
 	* scripts/features/patternrules: Add a test for Savannah bug #12267.
